remove overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -57,4 +57,5 @@ html{
 
 .infinite-scroll-component{
     @apply scrollbar-none;
+    overflow:unset !important;
 }
